<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_navigation_menu"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_navigation_menu" />
        <item
            android:id="@+id/nav_mission"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_mission" />

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"/>
    </group>

</menu>
